Create docs issue -> Create lessons issue

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Ecological Forecasting & Dynamics Class"
 enableRobotsTXT = true
 
 # Hugo allows theme composition (and inheritance). The precedence is from left to right.
-theme = ["docsy"]
+theme = ["custom-shortcodes", "docsy"]
 
 # Will give values to .Lastmod etc.
 enableGitInfo = true
@@ -188,4 +188,3 @@ enable = false
 	url = "https://example.org/mail"
 	icon = "fa fa-envelope"
         desc = "Discuss development issues around the project"
-
