--- a/config.toml
+++ b/config.toml
@@ -156,16 +156,7 @@ enable = false
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
-[[params.links.user]]
-	name = "User mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discussion and help from your fellow users"
-[[params.links.user]]
-	name ="Twitter"
-	url = "https://example.org/twitter"
-	icon = "fab fa-twitter"
-        desc = "Follow us on Twitter to get the latest news!"
+
 [[params.links.user]]
 	name = "Stack Overflow"
 	url = "https://example.org/stack"
@@ -173,17 +164,17 @@ enable = false
         desc = "Practical questions and curated answers"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
+	name ="Twitter"
+	url = "https://twitter.com/weecology"
+	icon = "fab fa-twitter"
+        desc = "Follow us on Twitter to get the latest news!"
+[[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/google/docsy"
+	url = "https://github.com/weecology/forecasting-course"
 	icon = "fab fa-github"
         desc = "Development takes place here!"
 [[params.links.developer]]
-	name = "Slack"
-	url = "https://example.org/slack"
-	icon = "fab fa-slack"
-        desc = "Chat with other project developers"
-[[params.links.developer]]
 	name = "Developer mailing list"
-	url = "https://example.org/mail"
+	url = "mailto:forecasting-course@weecology.org"
 	icon = "fa fa-envelope"
         desc = "Discuss development issues around the project"
