Change name to Ecological Forecasting and Dynamics
This reorders the name to properly emphasize that the approach the course

--- a/OLD_config.toml
+++ b/OLD_config.toml
@@ -60,7 +60,7 @@ id = "UA-113453617-2"
 [languages]
 [languages.en]
 title = "Ecological Forecasting"
-description = "A course on ecological dynamics and forecasting"
+description = "A course on ecological forecasting & dynamics"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
