Add addition documentation for teachers and self-guided learners
Adds info to the README and the website on how to use the website for both audiences.

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,9 @@ main:
   - name: Syllabus
     url: syllabus/
     weight: 40
+  - name: Getting Started
+    url: getting-started/
+    weight: 50
   - name: About
     url: about/
-    weight: 50
+    weight: 60
